--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ SMTP_PORT=2525
 SMTP_USER=c13921915d46fa
 SMTP_PASS=dd5d622eb78774
 
+MYSQL_HOST=localhost
+MYSQL_DB_NAME=peakyjs
+MYSQL_USER=root
+MYSQL_PASSWORD=
+
+
